force-app/main/default/objects/Account/fields/BDate__c.field-meta.xml
<CustomField>
    <fullName>BDate__c</fullName>
    <description>This is Ex date field</description>
    <inlineHelpText>This is Date with Avi and Pashya</inlineHelpText>
    <label>BDate</label>
    <type>Date</type>
</CustomField>