force-app/main/default/objects/Account/fields/CopyBillingShipping__c.field-meta.xml
<CustomField>
    <fullName>CopyBillingShipping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copy billing address to shipping address when this is checked!</description>
    <label>CopyBillingShipping</label>
    <type>Checkbox</type>
</CustomField>