force-app/main/default/objects/Account/fields/Event_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Event_Picklist__c</fullName>
    <label>Event Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Old Program</fullName>
            </value>
            <value>
                <fullName>New Program</fullName>
            </value>
            <value>
                <fullName>OnRoof</fullName>
            </value>
            <value>
                <fullName>Beach Side</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>