force-app/main/default/objects/Account/fields/Last_Created_Opportunity_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Created_Opportunity_Date_Time__c</fullName>
    <label>Last Created Opportunity Date/Time</label>
    <type>DateTime</type>
</CustomField>