force-app/main/default/objects/Account/fields/Match_Province__c.field-meta.xml
<CustomField>
    <fullName>Match_Province__c</fullName>
    <formula>AND(NOT(ISBLANK(ShippingState)&amp;&amp; ISBLANK(BillingState)),
(BillingState = ShippingState))</formula>
    <label>Match Province</label>
    <type>Checkbox</type>
</CustomField>