force-app/main/default/objects/Account/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Number Of Contacts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>