force-app/main/default/objects/Account/fields/Total_Opty_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Opty_Amount__c</fullName>
    <label>Total Opty Amount</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>