force-app/main/default/objects/Account/recordTypes/Cold_Rating.recordType-meta.xml
<RecordType>
    <fullName>Cold_Rating</fullName>
    <active>true</active>
    <label>Cold Rating</label>
</RecordType>