force-app/main/default/objects/Account/recordTypes/Hot_Accounts.recordType-meta.xml
<RecordType>
    <fullName>Hot_Accounts</fullName>
    <active>true</active>
    <label>Hot Accounts</label>
</RecordType>