force-app/main/default/objects/Account/recordTypes/Warm_Rating.recordType-meta.xml
<RecordType>
    <fullName>Warm_Rating</fullName>
    <active>true</active>
    <label>Warm Rating</label>
</RecordType>