force-app/main/default/objects/Account/validationRules/Industry_Ownership_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Industry_Ownership_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Industry, &apos;Technology&apos;)  &amp;&amp; ISPICKVAL(Ownership, &apos;Subsidiary&apos;)</errorConditionFormula>
    <errorDisplayField>Ownership</errorDisplayField>
    <errorMessage>When Industry is Technology then Ownership can not be Subsidiary</errorMessage>
</ValidationRule>