force-app/main/default/objects/Account/validationRules/Rating_Based_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Based_Validation</fullName>
    <active>false</active>
    <description>Rating does not match with the Annual Revenue (=&gt; 50000) and Employee Count (=&gt;5000)</description>
    <errorConditionFormula>AND(
Text(Rating) = &apos;Hot&apos;,
OR(
NumberOfEmployees &lt; 5000,
AnnualRevenue &lt; 50000
)
)</errorConditionFormula>
    <errorMessage>Rating does not match with the Annual Revenue (=&gt; 50000) and Employee Count (=&gt;5000)</errorMessage>
</ValidationRule>